<resources>
    <string name="app_name">BrighterBrain</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_profile">Create Profile</string>

    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
</resources>
